--- a/pom.xml
+++ b/pom.xml
@@ -1,276 +1,83 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-    <modelVersion>4.0.0</modelVersion>
-    <groupId>org.mule.modules</groupId>
-    <artifactId>mule-module-dropbox</artifactId>
-    <packaging>cloud-connector</packaging>
-    <name>Mule dropbox Cloud Connector</name>
-    <version>1.0-SNAPSHOT</version>
-    <description>Mule Cloud connector to dropbox</description>
-    <url>http://www.muleforge.org/projects/mule-module-dropbox</url>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<groupId>org.mule.modules</groupId>
+	<artifactId>Dropbox-connector</artifactId>
+	<version>3.2.2</version>
+	<packaging>mule-module</packaging>
+	<name>Mule Dropbox Cloud Connector</name>
+	<description>Connector for accessing, creating folders and files in dropbox. Uses OAuth for authentication.</description>
 
+	<parent>
+		<groupId>org.mule.tools.devkit</groupId>
+		<artifactId>mule-devkit-parent</artifactId>
+		<version>3.3.1-SNAPSHOT</version>
+	</parent>
 
-    <properties>
-        <version.mule>3.2.0</version.mule>
-        <version.jersey>1.8.1</version.jersey>
-        <!-- Tools properties -->
-        <eclipsePluginVersion>2.8</eclipsePluginVersion>
-        <vmtype>org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType</vmtype>
-        <!-- Jersey client is JDK6 only -->
-        <jdk.name>JavaSE-1.6</jdk.name>
-        <jdk.version>1.6</jdk.version>
-    </properties>
+	<properties>
+		<mule.version>3.3.0</mule.version>
+		<junit.version>4.9</junit.version>
+		<mockito.version>1.8.2</mockito.version>
+		<jdk.version>1.6</jdk.version>
+		<jersey.version>1.13</jersey.version>
+		<category>Community</category>
+		<devkit.studio.package.skip>false</devkit.studio.package.skip>
+	</properties>
 
-    <build>
-        <extensions>
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-webdav</artifactId>
-                <version>1.0-beta-2</version>
-            </extension>
-        </extensions>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.3.2</version>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                    <encoding>ISO-8859-1</encoding>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-eclipse-plugin</artifactId>
-                <version>${eclipsePluginVersion}</version>
-                <configuration>
-                    <!-- by default download all sources when generating project files -->
-                    <downloadSources>true</downloadSources>
-                    <classpathContainers>
-                        <classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER/${vmtype}/${jdk.name}
-                        </classpathContainer>
-                    </classpathContainers>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-idea-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <downloadSources>true</downloadSources>
-                    <jdkName>${jdk.version}</jdkName>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.mule.tools</groupId>
-                <artifactId>mule-cloud-connector-maven-plugin</artifactId>
-                <version>2.0.12</version>
-                <extensions>true</extensions>
-            </plugin>
+	<dependencies>
+		<dependency>
+			<artifactId>signpost-core</artifactId>
+			<groupId>oauth.signpost</groupId>
+			<version>1.2.1.2</version>
+			<scope>compile</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey</groupId>
+			<artifactId>jersey-client</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey.contribs</groupId>
+			<artifactId>jersey-multipart</artifactId>
+			<version>${jersey.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>com.googlecode.json-simple</groupId>
+			<artifactId>json-simple</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<dependency>
+			<groupId>com.sun.jersey.oauth</groupId>
+			<artifactId>oauth-client</artifactId>
+			<version>1.1.1-ea</version>
+		</dependency>
 
-            <!-- The release distribution for this project -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>2.2</version>
-                <configuration>
-                    <finalName>${project.artifactId}-${project.version}</finalName>
-                    <descriptors>
-                        <descriptor>assembly.xml</descriptor>
-                    </descriptors>
-                    <appendAssemblyId>false</appendAssemblyId>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
+		<dependency>
+			<groupId>com.sun.jersey.oauth</groupId>
+			<artifactId>oauth-signature</artifactId>
+			<version>1.1.1-ea</version>
+		</dependency>
+	</dependencies>
 
-    <!-- plugins for creating site reports -->
-    <reporting>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-report-plugin</artifactId>
-                <version>2.6</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-pmd-plugin</artifactId>
-                <version>2.5</version>
-                <configuration>
-                    <targetJdk>${jdk.version}</targetJdk>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>2.4</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>taglist-maven-plugin</artifactId>
-                <version>2.4</version>
-                <configuration>
-                    <tags>
-                        <tag>TODO</tag>
-                        <tag>@todo</tag>
-                        <tag>FIXME</tag>
-                        <tag>@fixme</tag>
-                        <tag>@deprecated</tag>
-                    </tags>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jxr-plugin</artifactId>
-                <version>2.2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.7</version>
-                <configuration>
-                    <source>${jdk.version}</source>
-                    <links>
-                        <link>http://java.sun.com/j2ee/1.4/docs/api</link>
-                        <link>http://java.sun.com/j2se/1.4.2/docs/api</link>
-                        <link>http://java.sun.com/j2se/1.5.0/docs/api</link>
-                    </links>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>jdepend-maven-plugin</artifactId>
-                <version>2.0-beta-2</version>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>2.3.1</version>
-            </plugin>
-        </plugins>
-    </reporting>
+	<repositories>
+		<repository>
+			<id>mulesoft-snapshots</id>
+			<name>MuleSoft Snapshots Repository</name>
+			<url>http://repository.mulesoft.org/snapshots/</url>
+			<layout>default</layout>
+		</repository>
+		<repository>
+			<id>mulesoft-releases</id>
+			<name>MuleSoft Releases Repository</name>
+			<url>http://repository.mulesoft.org/releases/</url>
+			<layout>default</layout>
+		</repository>
+	</repositories>
 
-    <dependencies>
-        <!-- Mule Dependencies -->
-        <dependency>
-            <groupId>org.mule.modules</groupId>
-            <artifactId>mule-module-spring-config</artifactId>
-            <version>${version.mule}</version>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-client</artifactId>
-            <version>${version.jersey}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-json</artifactId>
-            <version>${version.jersey}</version>
-        </dependency>
-
-        <!-- for testing -->
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.2</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.mule.transports</groupId>
-            <artifactId>mule-transport-file</artifactId>
-            <version>${version.mule}</version>
-            <!-- TODO for manual tests only -->
-        </dependency>
-        <dependency>
-            <groupId>org.mule.transports</groupId>
-            <artifactId>mule-transport-http</artifactId>
-            <version>${version.mule}</version>
-            <!-- TODO for manual tests only -->
-        </dependency>
-        <dependency>
-            <groupId>org.mule.modules</groupId>
-            <artifactId>mule-module-scripting</artifactId>
-            <version>${version.mule}</version>
-            <!-- TODO for manual tests only -->
-        </dependency>
-        <dependency>
-            <groupId>org.mule.tests</groupId>
-            <artifactId>mule-tests-functional</artifactId>
-            <version>${version.mule}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mule.tools</groupId>
-            <artifactId>mule-cloud-connector-annotations</artifactId>
-            <version>2.0.12</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.sun.jersey.oauth</groupId>
-            <artifactId>oauth-client</artifactId>
-            <version>1.1.1-ea</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.sun.jersey.oauth</groupId>
-            <artifactId>oauth-signature</artifactId>
-            <version>1.1.1-ea</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.sun.jersey.contribs</groupId>
-            <artifactId>jersey-multipart</artifactId>
-            <version>${version.jersey}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-            <version>1.1</version>
-        </dependency>
-
-    </dependencies>
-
-    <repositories>
-        <repository>
-            <id>codehaus-repo</id>
-            <name>MuleForge Release Repository</name>
-            <url>http://repository.codehaus.org/</url>
-            <layout>default</layout>
-        </repository>
-        <repository>
-            <id>muleforge-release</id>
-            <name>MuleForge Release Repository</name>
-            <url>http://repository.muleforge.org/release/</url>
-            <layout>default</layout>
-        </repository>
-        <repository>
-            <id>codehaus-mule-repo</id>
-            <name>Codehaus Repository</name>
-            <url>http://dist.codehaus.org/mule/dependencies/maven2</url>
-            <layout>default</layout>
-        </repository>
-        <repository>
-            <id>dev.java.net</id>
-            <name>Java.net Repository for Maven</name>
-            <url>http://download.java.net/maven/2/</url>
-        </repository>
-    </repositories>
-
-    <pluginRepositories>
-        <pluginRepository>
-            <id>muleforge-plugin-release</id>
-            <name>Muleforge Release Repository</name>
-            <url>http://repository.muleforge.org/release/</url>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-        </pluginRepository>
-    </pluginRepositories>
+	<scm>
+		<connection>git@github.com:mulesoft/dropbox-connector.git</connection>
+		<developerConnection>git@github.com:mulesoft/dropbox-connector.git</developerConnection>
+		<url>https://github.com/mulesoft/dropbox-connector</url>
+	</scm>
 </project>
