--- a/demo/META-INF/.classpath
+++ b/demo/META-INF/.classpath
@@ -6,6 +6,6 @@
 	<classpathentry kind="src" path="src/test/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="src" path="src/test/resources"/>
-	<classpathentry exported="true" kind="con" path="MULE_LIB/Dropbox"/>
+	<classpathentry kind="con" path="MULE_LIB/Dropbox"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
