--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mule.modules</groupId>
-	<artifactId>Dropbox-connector</artifactId>
-	<version>3.2.2</version>
+	<artifactId>mule-module-dropbox</artifactId>
+	<version>3.2.2-SNAPSHOT</version>
 	<packaging>mule-module</packaging>
 	<name>Mule Dropbox Cloud Connector</name>
 	<description>Connector for accessing, creating folders and files in dropbox. Uses OAuth for authentication.</description>
