--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mule.modules</groupId>
 	<artifactId>mule-module-dropbox</artifactId>
-	<version>3.2.2</version>
+	<version>3.2.3-SNAPSHOT</version>
 	<packaging>mule-module</packaging>
 	<name>Mule Dropbox Cloud Connector</name>
 	<description>Connector for accessing, creating folders and files in dropbox. Uses OAuth for authentication.</description>
