--- a/doc/Dropbox-connector.xml.sample
+++ b/doc/Dropbox-connector.xml.sample
@@ -1,9 +1,9 @@
 <!-- BEGIN_INCLUDE(dropbox:authorize) -->
     <dropbox:authorize/>
 <!-- END_INCLUDE(dropbox:authorize) -->
-<!-- BEGIN_INCLUDE(dropbox:upload-file) -->
-    <dropbox:upload-file path="foo/bar" filename="test.txt"/>
-<!-- END_INCLUDE(dropbox:upload-file) -->
+<!-- BEGIN_INCLUDE(dropbox:upload-stream) -->
+    <dropbox:upload-stream path="foo/bar" filename="test.txt"/>
+<!-- END_INCLUDE(dropbox:upload-stream) -->
 <!-- BEGIN_INCLUDE(dropbox:create-folder) -->
     <dropbox:create-folder path="foo/bar"/>
 <!-- END_INCLUDE(dropbox:create-folder) -->
