--- a/doc/Dropbox-connector.xml.sample
+++ b/doc/Dropbox-connector.xml.sample
@@ -4,6 +4,9 @@
 <!-- BEGIN_INCLUDE(dropbox:upload-stream) -->
     <dropbox:upload-stream path="foo/bar" filename="test.txt"/>
 <!-- END_INCLUDE(dropbox:upload-stream) -->
+<!-- BEGIN_INCLUDE(dropbox:upload-long-stream) -->
+    <dropbox:upload-long-stream path="foo/bar" filename="test.txt"/>
+<!-- END_INCLUDE(dropbox:upload-long-stream) -->
 <!-- BEGIN_INCLUDE(dropbox:create-folder) -->
     <dropbox:create-folder path="foo/bar"/>
 <!-- END_INCLUDE(dropbox:create-folder) -->
