--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.mule.modules</groupId>
 	<artifactId>mule-module-dropbox</artifactId>
-	<version>3.3.1-SNAPSHOT</version>
+	<version>3.3.1-hack-SNAPSHOT</version>
 	<packaging>mule-module</packaging>
 	<name>Mule Dropbox Cloud Connector</name>
 	<description>Connector for accessing, creating folders and files in dropbox. Uses OAuth2 for authentication.</description>
@@ -11,7 +11,7 @@
 	<parent>
 		<groupId>org.mule.tools.devkit</groupId>
 		<artifactId>mule-devkit-parent</artifactId>
-		<version>3.4.0</version>
+		<version>3.5.0-cascade</version>
 	</parent>
 
 	<properties>
