--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,20 @@
         </repository>
     </repositories>
 
+    <distributionManagement>
+        <repository>
+            <id>mule-ee-releases</id>
+            <name>MuleSoft Release Repository</name>
+            <url>https://repository-master.mulesoft.org/nexus/content/repositories/ci-releases/</url>
+        </repository>
+        <snapshotRepository>
+            <id>mule-ee-snapshots</id>
+            <name>MuleSoft Snapshot Repository</name>
+            <url>https://repository-master.mulesoft.org/nexus/content/repositories/ci-snapshots/</url>
+            <uniqueVersion>false</uniqueVersion>
+        </snapshotRepository>
+    </distributionManagement>
+
 	<scm>
 		<connection>scm:git:git://github.com:mulesoft/dropbox-connector.git</connection>
 		<developerConnection>scm:git:git@github.com:mulesoft/dropbox-connector.git</developerConnection>
